# LogoKaresz.cpp

./: CMakeLists.txt  draw.cpp  draw.hpp  feladat.cpp  feladat.hpp  karesz.cpp  karesz.hpp  moves.hpp  run  tofix  window.cpp
include/: constants.h  draw.h  feladat.h  karesz.h  moves.h
src/: draw.cpp  feladat.cpp  karesz.cpp  window.cpp
